# fast-eda-cli

./: .gitignore  Makefile  README.md  pyproject.toml
src/: app.py  args.py  colors.py  data_reader.py  eda.py  validate_args.py
