[tool.poetry]
name = "src"
version = "0.1.0"
description = "Fast EDA Command Line Tool to Create Fast Exploratory Data Analysis for Given Files."
authors = ["Ezzaldin97 <kingtal632@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyfiglet = "^0.8.post1"
inquirerpy = "^0.3.0"
pyarrow = "^12.0.0"
pandas = "^1.3.5"
numpy = "1.22.0"
sweetviz = "^2.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
